# tcp-audio-streamer

./: .gitignore  CMakeLists.txt  TCP_PROJECT_PLAN.md
.cache/clangd/index/: Server.cpp.C6FE3B33E49FA38D.idx  Server.h.65401C5B122E119B.idx  main.cpp.2FE58C95A05C88D2.idx  main.cpp.902721E0644E219A.idx
src/client/: main.cpp
src/core/: Socket.cpp  error.h  result.h  socket.h
src/server/: Server.cpp  main.cpp  server.h
src/utils/: log.h
